--- a/HTML/main-tabs.html
+++ b/HTML/main-tabs.html
@@ -3,7 +3,7 @@
     <!-- All navigation buttons and top tabs -->
     <ul class="allTabs">
         <li class="btns">
-            <img src="PageElements/PrevButton.png" class="arrow" ng-click="tabs.tabLeft()"></img>
+            <img src="PrevButton.png" class="arrow" ng-click="tabs.tabLeft()">
         </li>
         <li ng-class="{ active:tabs.tabSet(1) }" class="btns">
             <button class="navBtns" ng-click="tabs.setTab(1)">ABOUT</button>
@@ -18,17 +18,17 @@
             <button class="navBtns" ng-click="tabs.setTab(4)">RESUMES/CONTACT</button>
         </li>
         <li class="btns">
-            <img src="PageElements/NextButton.png" class="arrow" ng-click="tabs.tabRight()"></img>
+            <img src="NextButton.png" class="arrow" ng-click="tabs.tabRight()">
         </li>
     </ul>
 
     <!-- First Tab About Me -->
-    <div ng-show="tabs.tabSet(1)" ng-include="'HTML/about-me.html'"></div>
+    <div ng-show="tabs.tabSet(1)" ng-include="'html/about-me.html'"></div>
     <!-- Second Tab Research -->
-    <div ng-show="tabs.tabSet(2)" ng-include="'HTML/my-research.html'"></div>
+    <div ng-show="tabs.tabSet(2)" ng-include="'html/my-research.html'"></div>
     <!-- Third Tab Publications -->
-    <div ng-show="tabs.tabSet(3)" ng-include="'HTML/my-pubs.html'"></div>
+    <div ng-show="tabs.tabSet(3)" ng-include="'html/my-pubs.html'"></div>
     <!-- Fourth Tab Resume and Contact -->
-    <div ng-show="tabs.tabSet(4)" ng-include="'HTML/my-resume.html'"></div>
+    <div ng-show="tabs.tabSet(4)" ng-include="'html/my-resume.html'"></div>
 
 </section>
