--- a/index.html
+++ b/index.html
@@ -4,30 +4,24 @@
 <!-- This is MKI v1.1-->
 
 <head>
-<title>Michael Gennari</title>
-<meta charset = "UTF-8" />
-<!-- AngularJS -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
-<!-- Stylesheet -->
-<link rel="stylesheet" type="text/css" href="CSS/My-Page.css" />
-<!-- Font(s) -->
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Droid+Sans" />
-<link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Poiret+One' />
-<link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto:100' >
-<!-- Icon -->
-<link rel="icon" href="Images/myIcon.jpg"/>
+    <title>Michael Gennari</title>
+    <meta charset="UTF-8" />
+    <!-- AngularJS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+    <!-- Stylesheet -->
+    <link rel="stylesheet" type="text/css" href="css/website.css" />
+    <!-- Font(s) -->
+    <link rel='stylesheet' type='text/css' href="https://fonts.googleapis.com/css?family=Roboto+Condensed" />
+    <!-- Icon -->
+    <link rel="icon" href="Images/myIcon.jpg" />
 </head>
 
 <body ng-app="myPage">
-
     <!-- Tabs Section for Navigation -->
     <main-tabs></main-tabs>
-
     <!-- Quick copyright section -->
     <my-copyright></my-copyright>
-
-<!-- Modules -->
-<script type="text/javascript" src="JS/myPage.js"></script>
-
+    <!-- Modules -->
+    <script type="text/javascript" src="js/myPage.js"></script>
 </body>
 </html>
