- website updates - should be fine for now - no need to update until new research is completed

--- a/HTML/about-me.html
+++ b/HTML/about-me.html
@@ -5,8 +5,9 @@
     <hr class="line"/>
     <p class="outline">
         <img src="images/pi-day.jpeg" class="aboutMeImg" />
-        My name is Michael Gennari, and I am pursuing a Bachelors of Science in mathematical physics at the University of Waterloo.
-        My interests currently lie in nuclear theory, pure and applied mathematics, and high performance computing.
+        My name is Michael Gennari, and I am in my final year of a Bachelors of Science in mathematical physics at the 
+        University of Waterloo. Some of my interests currently include <i>ab initio</i> nuclear theory, applications of machine
+        learning to the nuclear many-body problem, mathematics, and high performance computing.
         <br />
         <h1 class="title">Education</h1>
         <hr class="line" />
@@ -23,12 +24,13 @@
             </ul>
         </div>
 
-    <h1 class="title">Travel</h1>
-    <hr class="line" />
+        <h1 class="title">Travel</h1>
+        <hr class="line" />
     <p class="outline">
-        Travelling has provided me with many novel experiences as I visit new locations around the world. I have travelled within Canada,
-        and some of the international locations I have visitied include Japan, Italy, San Marino, and Syria.
-        Each location has unique cultures, exposure to which has educated me in some way or another.
+        I have travelled for both pleasure and work, which has provided me with many unique experiences as I visit a variety of
+        new environments. Some of the international locations I have visitied include Japan, Italy, San Marino, and Syria.
+        I have also spent an extensive amount of time in Vancouver, Canada while working as a researcher in nuclear theory at TRIUMF.
+        Each location has unique cultural differences, exposure to which has helped educate me in one way or another.
         As a result of travelling, I have collected several photos, some of which are showcased below.
     </p>
 
@@ -41,8 +43,8 @@
     <h1 class="title">Astronomy</h1>
     <hr class="line" />
     <p class="outline">
-        Using my telescope is one of my favourite hobbies. I have always held a strong interest in cosmology, which has influenced my academic life heavily.
-        This interest is what has led me to pursue a degree in mathematical physics.
+        Using my telescope is one of my favourite hobbies. I owe my current position in studying physics to my original interest
+        in astronomy, which began at a young age.
         <br />
         <br />
         Once I take some better photos of Saturn, Jupiter, and the Moon, I will be placing them here.
