--- a/HTML/travel-photos-slider.html
+++ b/HTML/travel-photos-slider.html
@@ -3,13 +3,13 @@
     <center>
         <ul class="photoSlider">
             <li class="btns">
-                <img src="PageElements/PrevButton.png" ng-click="photos.decPhoto()" class="arrow" />
+                <img src="PrevButton.png" ng-click="photos.decPhoto()" class="arrow" />
             </li>
             <li class="btns">
                 <img ng-src="{{ photos.images[photos.currPhoto][0] }}" class="photoSlide" />
             </li>
             <li class="btns">
-                <img src="PageElements/NextButton.png" ng-click="photos.incPhoto()" class="arrow" />
+                <img src="NextButton.png" ng-click="photos.incPhoto()" class="arrow" />
             </li>
         </ul>
     </center>
