--- a/html/about-me.html
+++ b/html/about-me.html
@@ -1,22 +1,27 @@
 ﻿<section class="aboutMeSec">
 
     <!--  Full HTML outline for the About section tab -->
-    <h1 class="title">About Me</h1>
+    <h1 class="title">About me</h1>
     <hr class="line"/>
     <p class="outline">
         <img src="images/pi-day.jpeg" class="aboutMeImg" />
-        My name is Michael Gennari, and I am in my final year of a Bachelors of Science in mathematical physics at the 
-        University of Waterloo. Some of my interests currently include <i>ab initio</i> nuclear theory, applications of machine
-        learning to the nuclear many-body problem, mathematics, and high performance computing.
+        My name is Michael Gennari, and I am in my final year of a Bachelor of Science degree in mathematical physics at the
+        University of Waterloo in Ontario, Canada. My interests currently include the nuclear many-body problem, <i>ab initio</i> nuclear theory,
+        low-energy quantum chromodyanmics (QCD), chiral effective field theory, particle physics, group theory and machine learning.
         <br />
         <h1 class="title">Education</h1>
         <hr class="line" />
-        <h2 class="subtitle">Candidate for Bachelors of Science (BSc) in Mathematical Physics, University of Waterloo</h2>
+        <h2 class="subtitle">
+            Candidate for Bachelor of Science - University of Waterloo, Waterloo ON N2L 3G1 <br>
+            Honours Co-operative Mathematical Physics <br>
+            2014 - present
+        </h2>
         <div class="outline">
-            The Mathematical Physics program at the University of Waterloo is a double degree of Honours Physics coupled with the Honours Applied Mathematics.
+            The mathematical physics program at the University of Waterloo is comparable to taking both Honours physics and 
+            Honours applied mathematics degrees at the university.
             <br />
             <br />
-            A brief summary of education and technical skills:
+            A brief summary of my education and technical skills:
             <ul class="aboutMeSummary" ng-controller="mySummary as sum">
                 <li class="aboutMeSummary" ng-repeat="line in sum.summary">
                     {{ line[0] }}
@@ -24,8 +29,8 @@
             </ul>
         </div>
 
-        <h1 class="title">Travel</h1>
-        <hr class="line" />
+    <h1 class="title">Travel</h1>
+    <hr class="line" />
     <p class="outline">
         I have travelled for both pleasure and work, which has provided me with many unique experiences as I visit a variety of
         new environments. Some of the international locations I have visitied include Japan, Italy, San Marino, and Syria.
