--- a/HTML/my-resume.html
+++ b/HTML/my-resume.html
@@ -1,4 +1,5 @@
-﻿<section class="resumeSection" ng-controller="resumeController as resumeCtrl">
+﻿<!-- Section including both my curriculum vitae and resume -->
+<section class="resumeSection" ng-controller="resumeController as resumeCtrl">
     <h1 class="title">Resumes and references</h1>
     <hr class="line" />
     <!-- This loops through all my resume versions, references, and their descriptions -->
@@ -10,13 +11,12 @@
         </ul>
     </div>
 </section>
-
+<!-- Contact section handled here -->
 <section class="contactSection" ng-controller="contactMeController as contactCtrl">
     <h1 class="title">Contact</h1>
     <hr class="line" />
     <p class="outline">
-        If you would like to contact me, please feel free to reach me through any of the following email addresses. Additionally, you can contact me through the
-        University of Waterloo.
+        If you would like to contact me, please feel free to reach me through any of the following email addresses.
     </p>
     <!-- Shows all of my contact information and links where appropriate -->
     <table class="contactTable">
