--- a/html/about-me.html
+++ b/html/about-me.html
@@ -1,14 +1,14 @@
 ﻿<section class="aboutMeSec">
-
     <!--  Full HTML outline for the About section tab -->
     <h1 class="title">About me</h1>
     <hr class="line"/>
     <p class="outline">
         <img src="images/pi-day.jpeg" class="aboutMeImg" />
-        My name is Michael Gennari, and I am in my final year of a Bachelor of Science degree in mathematical physics at the
+        My name is Michael Gennari, and I am in my final year of a Bachelor of Science degree in mathematical physics with co-operative education at the
         University of Waterloo in Ontario, Canada. My interests currently include the nuclear many-body problem, <i>ab initio</i> nuclear theory,
         low-energy quantum chromodyanmics (QCD), chiral effective field theory, particle physics, group theory and machine learning.
         <br />
+        <!-- Education section is handled here -->
         <h1 class="title">Education</h1>
         <hr class="line" />
         <h2 class="subtitle">
@@ -28,31 +28,27 @@
                 </li>
             </ul>
         </div>
-
+    <!-- Travel section -->
     <h1 class="title">Travel</h1>
     <hr class="line" />
     <p class="outline">
-        I have travelled for both pleasure and work, which has provided me with many unique experiences as I visit a variety of
-        new environments. Some of the international locations I have visitied include Japan, Italy, San Marino, and Syria.
-        I have also spent an extensive amount of time in Vancouver, Canada while working as a researcher in nuclear theory at TRIUMF.
-        Each location has unique cultural differences, exposure to which has helped educate me in one way or another.
-        As a result of travelling, I have collected several photos, some of which are showcased below.
+        I have always enjoyed visiting new locations around the world. Academic conferences have provided me a way to travel through work, 
+        exposing me to new people, cultures, and environments. Some of my recent travel has taken me to locations such as Japan, for the
+        conference on direct reactions with exotic beams in 2018. I also spent approximately 16 months in Vancouver, while working as a 
+        researcher in nuclear theory at TRIUMF. <br> <br>
+        
+        I have also had the pleasure of traveling with my family to locations in Italy, San Marino, and Syria; places I greatly enjoyed. Photos from 
+        several of my travel experiences, whether they be for work or pleasure, are shown below.
     </p>
-
     <!-- Here is where the photo slider for travel photos gets placed -->
     <center>
         <travel-slider></travel-slider>
     </center>
-
-    <!-- There will be another photo slider for the astronomy section -->
+    <!-- There will be another photo slider for the astronomy section at some point -->
     <h1 class="title">Astronomy</h1>
     <hr class="line" />
     <p class="outline">
-        Using my telescope is one of my favourite hobbies. I owe my current position in studying physics to my original interest
-        in astronomy, which began at a young age.
-        <br />
-        <br />
-        Once I take some better photos of Saturn, Jupiter, and the Moon, I will be placing them here.
+        Using my telescope is one of my favourite hobbies. I owe my current position of studying physics to my childhood interest
+        in astronomy and cosmology. Once I take some better photos of Saturn, Jupiter, and the moon, I will be placing them here.
     </p>
-
 </section>
